# Ollama-MCP

./: .gitignore  README.md  TEST_DOCUMENTATION.md  TEST_RESULTS.md  airbnb.py  airbnb_formatted.py  app.py  launch_claude.bat  main.py  manual_test_cases.py  package-lock.json  package.json  pyproject.toml  simple_test_runner.py  test_airbnb_playwright.py  test_cases_airbnb_search.py
.gradio/flagged/: dataset1.csv
Ollama-MCP/: .gitignore
flightaware/: .env
mcp-fastapi-server/: README.md
tests/: example.spec.ts  test-1spec.ts
weather/: README.md
